# Lissajous

./: .clang-format  .gitignore  LICENSE  README.md  main.py  meson.build  resources.qrc  setup.py
plugins/: bar_chart_view.py  diagram.py  import_auto_table.py  import_csv_table.py  import_excel_table.py  mapvisual.py  meson.build  piechart_view.py  plot_view.py  simplegraphview.py  table_view.py  table_view_2.py  tableview.py
plugins/helloworld/: helloworld.cpp  helloworld.h  helloworld.json  meson.build
res/: ABOUT.html
res/qt/: main_widget.ui  main_window.ui  param_field_widget.qt.ui  param_field_widget.ui
src/: main.cpp  meson.build
src/api/: __init__.py  options.py  plugins.py
src/api/lissapi/: data.h  interface.h  option.h
src/core/: canvas_widget.py  core.cpp  core.h  file_loader_dialog.py  load_plugin.py  main_widget.py  main_window.py  navigation_widget.py  param_field_widget.py  param_group_widget.py  param_item_widget.py  params_widget.py  plugin_item_widget.py  plugins_widget.py  table_widget.py  visualizing_widget.py  widgets_container.py
src/ui/: mainwindow.cpp  mainwindow.h
src/utils/: ChartAdvices.py  ChartTypeAdviser.py  chart_advices.py  chart_type_adviser.py
utils/: ChartAdvices.py
